Fixed contrast error for accessibility

--- a/week_4/css/style.css
+++ b/week_4/css/style.css
@@ -21,7 +21,7 @@ body{
 }
 
 a {
-     color: #000000;
+     color: #fce172;
 }
 
 /* Class selectors */
